formatted date & content + better html rendering

--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
 			const API_URL = "https://api.rss2json.com/v1/api.json?rss_url=https%3A%2F%2Fmedium.com%2Ffeed%2F%40giacintocarlucci&api_key=kgpvqeytkvzw21wkppfr58bfc5arfamrrfqep6ai";
 			var feedData = {}
 
+			const formatDate = (date) => {
+				// Date formatting options
+				var options = {year: 'numeric', month: 'long', day: 'numeric' };
+				var dateFormatted = new Date(date);
+				// Format: monthname daynumber, year
+				dateFormatted = dateFormatted.toLocaleDateString('en', options);
+				dateFormatted = dateFormatted.toString();
+				return dateFormatted;
+			}
+
+			const trimContent = (content) => {
+				// removes images from content
+				let plainText = content.replace(/<img[^>]*>/g, "");
+				// max content length
+				let maxLength = 400
+				let trimmedString = plainText.substr(0, maxLength);
+				trimmedString = trimmedString.substr(0, Math.min(trimmedString.length, trimmedString.lastIndexOf(" ")))
+				return trimmedString;
+			}
+
 			const displayHeader = (data) => {
 				let title = data.feed.title;
 				let header = document.getElementById("header");
@@ -17,18 +37,25 @@
 			const displayPosts = (data) => {
 				let postsArray = data.items;
 				let postsContainer = document.getElementById("posts");
+
 				postsArray.map((post) => {
-					let postDiv = document.createElement("div");
-					let postTitle = document.createElement("div");
-					let postDate = document.createElement("div");
 
-					postTitle.innerHTML = post.title;
-					postDate.innerHTML = post.pubDate;
-
-					postDiv.appendChild(postTitle);
-					postDiv.appendChild(postDate);
-
-					postsContainer.appendChild(postDiv);
+					let HTMLPost = 
+					`
+						<div id="post-container">
+							<img id="post-image" src="${post.thumbnail}" alt="${post.title}"/>
+							<div id="post-title">
+								${post.title}
+							</div>
+							<div id="post-date">
+								${formatDate(post.pubDate)}
+							</div>
+							<div id="post-content">
+								${trimContent(post.description)}
+							</div>
+						</div>
+					`
+					postsContainer.innerHTML += HTMLPost;
 				})
 			}
 
