--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title> Giacinto Carlucci - Medium on website</title>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Palanquin:wght@700&family=Roboto&display=swap" rel="stylesheet"> 
 		<link rel="stylesheet" href="style.css"/>
 		<script type="text/javascript" src="./medium-on-website.js"></script>
 	</head>
