mini post template v1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 		<script type="text/javascript" src="./medium-on-website.js"></script>
 	</head>
 	<body>
-		<div id="posts" data-theme="light" data-template="classic"></div>
+		<div id="posts" data-theme="light" data-template="mini"></div>
 	</body>
 </html>
